--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,5 +7,5 @@
     "allowSyntheticDefaultImports": true,
     "strict": true
   },
-  "include": ["vite.config.ts","src/*/**.*"]
+  "include": ["vite.config.ts", "electron/**/*.ts"]
 }
